--- a/src/docs/asciidoc/groovy/index.adoc
+++ b/src/docs/asciidoc/groovy/index.adoc
@@ -675,8 +675,8 @@ Add the following configuration behind the SessionController:
 ----
 
 Inside the configuration we are defining the property "authenticatableClass", which must be a Class, which
-implements the interface `IAuthenticatable`. Additionally the class, which we are
-using here must be added into the mapper list like described above.
+implements the interface `IAuthenticatable` . Additionally the class, which
+we are using here must be added into the mapper list like described above.
 
 The RegisterController is processed in two phases: +
 The first phase is executed, when a user fills out and sends the registration form. If this is successfull, the
@@ -1223,7 +1223,7 @@ public class HelloWorldController extends AbstractController {
   private String propertyName;
 
   @Override
-  public void handle(RoutingContext context) {
+  public void handleController(RoutingContext context) {
     LOGGER.info("adding to context under " + propertyName);
     context.put(propertyName, "Hello world");
     context.next();
