--- a/src/docs/asciidoc/js/index.adoc
+++ b/src/docs/asciidoc/js/index.adoc
@@ -184,7 +184,7 @@ link:https://github.com/BraintagsGmbH/vertx-key-generator[ vertx-key-generator]
 ----
 {
   "edited" : true,
-  "keyGeneratorClass" : "de.braintags.io.vertx.keygenerator.impl.MongoKeyGenerator",
+  "keyGeneratorClass" : "de.braintags.vertx.keygenerator.impl.MongoKeyGenerator",
   "generatorProperties" : {
     "db_name" : "KeygeneratoDb",
     "startMongoLocal" : "false",
